--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,61 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #1a1818;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.left-column {
+  flex: 1;
+  padding: 20px;
+  background-color: #1a1818;
+}
+
+.chart {
+  width: 100%;
+  max-width: 400px;
+  height: 300px;
+  background-color: #1a1818;
+}
+.chart-container {
+  width: 70%; 
+  height: 400px; 
+  margin: 0 auto; 
+}
+
+.right-column {
+  flex: 1;
+  padding: 20px;
+
+}
+.tabs-content {
+  margin-top: 20px;
+}
+.image-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.image-container img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.data-paper{
+  padding: 16;
+  border-radius: 8px;
+  max-width: 400px;
+  background-color: #1a1818;
+  color:#fff
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  grid-gap: 16px; 
+}
+
+.task-card {
+  grid-column: 3; 
 }
